--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   image_picker: ^1.1.2
   path_provider: ^2.1.5
   permission_handler: ^11.3.1
+  supabase_flutter: ^2.8.4
 
 dev_dependencies:
   flutter_test:
